ai/open-webui/webui/gen-output/open-webui.open-webui.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/part-of: open-webui
  name: open-webui
  namespace: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
      app.kubernetes.io/component: open-webui
      app.kubernetes.io/part-of: open-webui
  template:
    metadata:
      labels:
        app: open-webui
        app.kubernetes.io/component: open-webui
        app.kubernetes.io/part-of: open-webui
    spec:
      containers:
      - env:
        - name: DATABASE_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: somesecret
        - name: DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: somesecret
        - name: DATABASE_URL
          value: postgres://$(DATABASE_USER):$(DATABASE_PASSWORD)@$(DATABASE_HOST)/$(DATABASE_NAME)?sslmode=require
        image: ghcr.io/open-webui/open-webui:main
        name: open-webui
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 3000m
            memory: 8Gi
          requests:
            cpu: 2500m
            memory: 3500Mi
        tty: true
        volumeMounts:
        - mountPath: /app/backend/data
          name: webui-volume
      volumes:
      - name: webui-volume
        persistentVolumeClaim:
          claimName: open-webui
