ai/open-webui/webui/gen-output/open-webui.open-webui.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/part-of: open-webui
  name: open-webui
  namespace: open-webui
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: open-webui
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/part-of: open-webui
  type: ClusterIP
